# spike-cms

./: .gitignore  README.md  docker-compose.yml  justfile
api/: mockdoc.json  pyproject.toml
api/app/: document_models.py  main.py  models.py
frontend/: astro.config.mjs  package-lock.json
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
prefect/: pyproject.toml
prefect/flows/: flow.py
search/: pyproject.toml
search/app/: main.py
transformer/: pyproject.toml
transformer/app/: document_models.py  documents_db_setup.py  main.py  models.py  navigator_transformer.py
valid_metadata/: af.json  cif.json  gcf.json  gef.json  intl-agreements.json  laws-and-policies.json  litigation.json  reports.json
vespa/: justfile
vespa/app/: services.xml  validation-overrides.xml
vespa/app/schemas/: documents.sd
